# call_me_ishmael

./: .env_example  .firebaserc  .gitignore  README.md  deploy_gcp.sh  firebase.json  main.py  pyproject.toml  requirements.txt  sending_state.json  sending_state_reset.json
.firebase/: hosting.Ym9va19vdXRwdXQ.cache
books/: a_farewell_to_arms.epub
scripts/: generate_index.py  set_active_book.py  upload_to_gcs.py
src/: emailer.py  html_chunker.py  main_cloud.py  state_manager.py  test_email.py
